--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,81 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Helvetica", sans-serif;
+  box-sizing: border-box;
+}
 
+.container {
+  text-align: center;
+}
+
+.header {
+  font-family: "Permanent Marker";
+  margin: 15px 0;
+  color: rgb(0, 0, 0);
+}
+
+.details {
+  margin: 0 auto;
+  width: 80%;
+  text-align: center;
+  color: rgb(3, 54, 43);
+}
+
+input {
+  border: 2px solid rgb(122, 143, 30);
+  outline: none;
+  padding: 4px 8px;
+  margin: 0 0 10px 4px;
+  font-size: 18px;
+}
+
+input:focus {
+  border: 2px solid #e15e32;
+}
+
+button {
+  border: 2px solid rgb(235, 244, 245);
+  padding: 8px;
+  font-size: 18px;
+  width: 250px;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  background-color: rgb(79, 110, 248);
+}
+
+button:active,
+button:focus {
+  outline: none;
+  border: 2px solid #e15e32;
+}
+
+button:hover {
+  background-color: #ece9e9;
+}
+
+/* Whole tic tac toe grid */
+.game {
+  display: none;
+  /* change it using js */
+  flex-wrap: wrap;
+  width: 300px;
+  height: 300px;
+  background-color: pink;
+  text-align: center;
+  margin: 0 auto;
+  /* border: 1px solid black; */
+}
+
+/* 1 box out of 9 */
+.game-slot {
+  width: 100px;
+  height: 100px;
+  border: 1px solid rgb(58, 8, 238);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Permanent Marker";
+  font-size: 40px;
+}
